Import of JJORE/Term-HiliteDiff-0.02 from CPAN.
gitpan-cpan-distribution: Term-HiliteDiff
gitpan-cpan-version:      0.02
gitpan-cpan-path:         JJORE/Term-HiliteDiff-0.02.tar.gz
gitpan-cpan-author:       JJORE
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -3,3 +3,7 @@ Revision history for Term-HiliteDiff
 0.01    Date/time
         First version, released on an unsuspecting world.
 
+0.02    Mar 19, 2007
+        Documentation improvments
+        Removed author tests
+        Added array ref feature
