--- a/lib/Term/HiliteDiff.pod
+++ b/lib/Term/HiliteDiff.pod
@@ -104,25 +104,56 @@ used this module from the command line.
 
   perl -MTerm::HiliteDiff -pe '$_ = hilite_diff( $_ )'
 
+=head1 DEPENDENCIES
+
+strict, vars, Exporter, Algorithm::Diff, Test::More, ExtUtils::MakeMaker
+
+=head1 SUPPORT AND DOCUMENTATION
+
+After installing, you can find documentation for this module with the
+perldoc command.
+
+    perldoc Term::HiliteDiff
+
+You can also look for information at:
+
+=over
+
+=item RT, CPAN's request tracker L<http://rt.cpan.org/NoAuth/Bugs.html?Dist=Term-HiliteDiff>
+
+=item AnnoCPAN, Annotated CPAN documentation L<http://annocpan.org/dist/Term-HiliteDiff>
+
+=item CPAN Ratings L<http://cpanratings.perl.org/d/Term-HiliteDiff>
+
+=item Search CPAN L<http://search.cpan.org/dist/Term-HiliteDiff>
+
+=back
+
 =head1 AUTHOR
 
-Joshua ben Jore, C<< <jjore@cpan.org> >>
+Josh ben Jore, C<< <jjore@cpan.org> >>
 
-=head1 BUGS
+=head1 COPYRIGHT AND LICENCE
 
-Please report any bugs or feature requests to
-C<bug-term-hilitediff@rt.cpan.org>, or through the web interface at
-L<http://rt.cpan.org/NoAuth/ReportBug.html?Queue=Term-HiliteDiff>.
-I will be notified, and then you'll automatically be notified of progress on
-your bug as I make changes.
+Copyright (C) 2006,2009 Joshua ben Jore.
 
-=head1 ACKNOWLEDGEMENTS
+This program is distributed WITHOUT ANY WARRANTY, including but not
+limited to the implied warranties of merchantability or fitness for a
+particular purpose.
 
-=head1 COPYRIGHT & LICENSE
+The program is free software.  You may distribute it and/or modify it
+under the terms of the GNU General Public License as published by the
+Free Software Foundation (either version 2 or any later version) and
+the Perl Artistic License as published by O'Reilly Media, Inc.  Please
+open the files named Copying and Artistic for a copy of these
+licenses.
 
-Copyright 2006 Joshua ben Jore, All Rights Reserved.
+=begin emacs
 
-This program is free software; you can redistribute it and/or modify it
-under the same terms as Perl itself.
+## Local Variables:
+## mode: pod
+## mode: auto-fill
+## End:
 
-=cut
+=end emacs
+
