Import of JJORE/Term-HiliteDiff-0.06 from CPAN.
gitpan-cpan-distribution: Term-HiliteDiff
gitpan-cpan-version:      0.06
gitpan-cpan-path:         JJORE/Term-HiliteDiff-0.06.tar.gz
gitpan-cpan-author:       JJORE
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -7,3 +7,15 @@ Revision history for Term-HiliteDiff
         Documentation improvments
         Removed author tests
         Added array ref feature
+
+0.03    Sometime in 2007
+
+0.04    Sun Dec 13, 2009
+        Mostly works, except for the syntax errors
+
+0.05    Sun Dec 14, 2009
+        It works!
+        Documentation updates
+
+0.06    Sun Dec 14, 2009
+        Documentation updates
