--- a/Changes
+++ b/Changes
@@ -19,3 +19,6 @@ Revision history for Term-HiliteDiff
 
 0.06    Sun Dec 14, 2009
         Documentation updates
+
+0.07    Sun Dec 14, 2009
+        Fixed pre-parse mode
