Import of JJORE/Term-HiliteDiff-0.08 from CPAN.
gitpan-cpan-distribution: Term-HiliteDiff
gitpan-cpan-version:      0.08
gitpan-cpan-path:         JJORE/Term-HiliteDiff-0.08.tar.gz
gitpan-cpan-author:       JJORE
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -22,3 +22,7 @@ Revision history for Term-HiliteDiff
 
 0.07    Sun Dec 14, 2009
         Fixed pre-parse mode
+
+0.08    Tue Dec 16, 2009
+        Fixed lots of tests
+        Dropped the auto-print feature
