--- a/Changes
+++ b/Changes
@@ -26,3 +26,6 @@ Revision history for Term-HiliteDiff
 0.08    Tue Dec 16, 2009
         Fixed lots of tests
         Dropped the auto-print feature
+
+0.09    Sat Dec 19, 2009
+        Revamped documentation
