Import of JJORE/Term-HiliteDiff-0.10 from CPAN.
gitpan-cpan-distribution: Term-HiliteDiff
gitpan-cpan-version:      0.10
gitpan-cpan-path:         JJORE/Term-HiliteDiff-0.10.tar.gz
gitpan-cpan-author:       JJORE
gitpan-cpan-maturity:     released

--- a/Changes
+++ b/Changes
@@ -29,3 +29,8 @@ Revision history for Term-HiliteDiff
 
 0.09    Sat Dec 19, 2009
         Revamped documentation
+
+0.10    Tests pass for perl-5.12.2
+        Use Dist::Zilla
+        Remove `no warnings' for 5.005 compatibility
+
